--- a/devops_management/DevOpsPipelineKickOffAzureMLModelPipelineBuild.yml
+++ b/devops_management/DevOpsPipelineKickOffAzureMLModelPipelineBuild.yml
@@ -42,5 +42,5 @@ stages:
           set -e # fail on error
           export SUBSCRIPTION_ID=$(az account show --query id -o tsv)
           # Invoke the Python building and publishing a training pipeline
-          python -m ml_service.pipelines.diabetes_regression_build_train_pipeline
+          python -m aml_management\train_evaluate_register_model_in_aml_workspace
       displayName: 'Publish Azure Machine Learning Pipeline'
