--- a/devops_management/setup_devOps_environment.yml
+++ b/devops_management/setup_devOps_environment.yml
@@ -1,3 +1,6 @@
+variables:
+- name: devVariableGroupId
+
 steps:
 # Specify python version if you have side-by-side versions
 - task: UsePythonVersion@0
@@ -19,14 +22,24 @@ steps:
   
 
   
-- bash: az pipelines variable-group create --name aml-devops-dev --org https://dev.azure.com/memasanz/ --project=MeganMasanzRepos --variables LOCATION=eastus2 RESOURCE_GROUP=mm-aml-devops-dev-rg WORKSPACE_NAME=mm-aml-devops-dev DEV_WORKSPACE_SVC_CONNECTION=mm-aml-dev-connection
+- bash: az pipelines variable-group create --name vgroup-aml-devops-dev --org https://dev.azure.com/memasanz/ --project=MeganMasanzRepos --variables LOCATION=eastus2 RESOURCE_GROUP=mm-aml-devops-dev-rg WORKSPACE_NAME=mm-aml-devops-dev DEV_WORKSPACE_SVC_CONNECTION=mm-aml-dev-connection
   displayName: 'Set Variable Group for dev'
   env:
     AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
   
   
-- bash: variable_list = az pipelines variable-group variable list --group-name aml-devops-dev --query 'id' -o  json
+- bash: variable_list = az pipelines variable-group variable list --group-name vgroup-aml-devops-dev --query 'id' -o  json
   displayName: 'List variables in aml-devops-dev variable group'
   env:
     AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
+    
+- bash: echo "##vso[task.setvariable variable=devVariableGroupId]$(az pipelines variable-group list --group-name vgroup-aml-devops-dev --query [].id -o tsv)"
+  env:
+    AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
+  displayName: 'Get vgroup-aml-devops-dev variable group id'
+
+- bash: az pipelines variable-group variable list --group-id $(variableGroupId)
+  env:
+    AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
+  displayName: 'List variables in vgroup-aml-devops-dev variable group
   
