--- a/devops_management/setup_devOps_environment.yml
+++ b/devops_management/setup_devOps_environment.yml
@@ -30,12 +30,12 @@ steps:
     AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
   
     
-- bash: echo "##vso[task.setvariable variable=devVariableGroupId]$(az pipelines variable-group list --group-name vgroup-aml-devops-dev --query [].id -o tsv)"
+- bash: echo "##vso[task.setvariable variable=devVariableGroupId]$(az pipelines variable-group list --group-name vgroup-aml-devops-dev --org https://dev.azure.com/memasanz/ --project=MeganMasanzRepos --query [].id -o tsv)"
   env:
     AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
   displayName: 'Get vgroup-aml-devops-dev variable group id'
 
-- bash: az pipelines variable-group variable list --group-id $(devVariableGroupId)
+- bash: az pipelines variable-group variable list --group-id $(devVariableGroupId) --group-name vgroup-aml-devops-dev --org https://dev.azure.com/memasanz/ --project=MeganMasanzRepos
   env:
     AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
   displayName: 'List variables in vgroup-aml-devops-dev variable group'
@@ -47,12 +47,12 @@ steps:
     AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
   
     
-- bash: echo "##vso[task.setvariable variable=qaVariableGroupId]$(az pipelines variable-group list --group-name vgroup-aml-devops-qa --query [].id -o tsv)"
+- bash: echo "##vso[task.setvariable variable=qaVariableGroupId]$(az pipelines variable-group list --group-name vgroup-aml-devops-qa --org https://dev.azure.com/memasanz/ --project=MeganMasanzRepos --query [].id -o tsv)"
   env:
     AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
   displayName: 'Get vgroup-aml-devops-qa variable group id'
 
-- bash: az pipelines variable-group variable list --group-id $(qaVariableGroupId)
+- bash: az pipelines variable-group variable list --group-id $(qaVariableGroupId) --group-name vgroup-aml-devops-qa --org https://dev.azure.com/memasanz/ --project=MeganMasanzRepos
   env:
     AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
   displayName: 'List variables in vgroup-aml-devops-qa variable group'
@@ -63,12 +63,12 @@ steps:
   env:
     AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
     
-- bash: echo "##vso[task.setvariable variable=prodVariableGroupId]$(az pipelines variable-group list --group-name vgroup-aml-devops-dev --query [].id -o tsv)"
+- bash: echo "##vso[task.setvariable variable=prodVariableGroupId]$(az pipelines variable-group list --group-name vgroup-aml-devops-prod --org https://dev.azure.com/memasanz/ --project=MeganMasanzRepos --query [].id -o tsv)"
   env:
     AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
   displayName: 'Get vgroup-aml-devops-prod variable group id'
 
-- bash: az pipelines variable-group variable list --group-id $(prodVariableGroupId)
+- bash: az pipelines variable-group variable list --group-id $(prodVariableGroupId)  --org https://dev.azure.com/memasanz/ --project=MeganMasanzRepos
   env:
     AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
   displayName: 'List variables in vgroup-aml-devops-prod variable group'
