--- a/.pipelines/DEV-devOps-variables-template.yml
+++ b/.pipelines/DEV-devOps-variables-template.yml
@@ -5,17 +5,17 @@ variables:
   - name: LOCATION
     value: eastus2
     
-   - name: mm-aml-devops-dev-rg
-     value: eastus2
+  - name: RESOURCE_GROUP
+    value: mm-aml-devops-dev-rg
   
-   - name: WORKSPACE_NAME
-     value: mm-aml-devops-dev
+  - name: WORKSPACE_NAME
+    value: mm-aml-devops-dev
     
-   - name: AZURE_RM_SVC_CONNECTION
-     value: indevtemplateymlfile
+  - name: AZURE_RM_SVC_CONNECTION
+    value: indevtemplateymlfile
     
-   - name: ACI_DEPLOYMENT_NAME
-     value: mlops-aci
+  - name: ACI_DEPLOYMENT_NAME
+    value: mlops-aci
     
 
     
