--- a/.pipelines/DEV-devOps-variables-template.yml
+++ b/.pipelines/DEV-devOps-variables-template.yml
@@ -23,7 +23,7 @@ variables:
     value: code
     # The path to the model training script under SOURCES_DIR_TRAIN
   - name: TRAIN_SCRIPT_PATH
-    value: training/train.py
+    value: train/train.py
     # The path to the model evaluation script under SOURCES_DIR_TRAIN
   - name: EVALUATE_SCRIPT_PATH
     value: evaluate/evaluate_model.py
