--- a/.pipelines/01_devOpsPipelineKickOffAzureMLModelPipelineBuild.yml
+++ b/.pipelines/01_devOpsPipelineKickOffAzureMLModelPipelineBuild.yml
@@ -25,9 +25,9 @@ pool:
 
 stages:
 - stage: 'Build_Training_Pipeline_in_dev'
-  displayName: 'Build Model in dev'
-  environment: 'dev'
+  displayName: 'Build Pipeline to build Model in dev'
   jobs:
+  environment: 'dev'
   - job: "DEV_Build_Model_Train_Pipe"
     displayName: "dev-Build Model Train Pipe"
     container: mlops
